Fixed parser because I broke it